<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >

            <ImageView
                android:background="@color/green"
                android:id="@+id/image_logo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:contentDescription="@string/logo_description"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/text_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/welcome_to_portal"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                />

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeWidth="2dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/black"
                android:background="@drawable/input_style"
                android:hint="@string/table_number"
                android:textColorHint="@color/gray"
                android:inputType="numberPassword"
                android:importantForAutofill="yes"
                android:padding="16dp"
                android:textSize="18sp"
                android:maxLength="4"
                />


            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />


            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="50dp"
                android:backgroundTint="@android:color/white"
                android:padding="16dp"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textColor="@color/green"
                android:textSize="18sp" />


        </LinearLayout>

    </ScrollView>

</LinearLayout>