<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:padding="16dp"
    tools:context=".RestaurantMenu">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center|start"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_welcome_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/welcome"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/text_token"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/token"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <ImageButton
        android:id="@+id/image_btn_exit"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="15dp"
        android:background="@android:color/transparent"
        android:scaleType="centerInside"
        android:src="@drawable/exit_to_app" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        app:tabGravity="fill"
        app:tabIndicatorColor="@color/white"
        app:tabMode="fixed"
        app:tabSelectedTextColor="@android:color/white"
        app:tabTextColor="@android:color/darker_gray"
        android:layout_below="@id/toolbar"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/tabLayout"
        android:layout_above="@id/textViewTotal"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <TextView
        android:id="@+id/textViewTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Total: R$ 0.0"
        android:textSize="18sp"
        android:layout_above="@id/finish"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:backgroundTint="@android:color/white"
        android:padding="16dp"
        android:text="@string/create_order"
        android:textAllCaps="true"
        android:textColor="@color/green"
        android:textSize="18sp" />
    </RelativeLayout>

